[package]
name = "dfm-plus"
version = "0.1.0"
edition = "2021"
description = "DFM+ danmaku engine — a Rust port of Bilibili's DanmakuFlameMaster layout algorithms"
license = "MIT"
repository = "https://github.com/nipaplay/DFM+"
keywords = ["danmaku", "barrage", "bilibili", "dfm", "layout"]
categories = ["multimedia", "game-development"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
rustc-hash = "2"
smallvec = "1"
regex = "1"
aho-corasick = "1"

[dev-dependencies]
serde_json = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
